--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -221,6 +221,7 @@ body {
 .my-skill-container {
     background-color: #301b3f;
     text-align: center;
+    height: 80vh;
 }
 
 #dataReadonlyReview {
@@ -303,7 +304,7 @@ body {
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
-  
+
 /* Modal Content (image) */
 .modal-content {
 margin: auto;
@@ -325,7 +326,7 @@ height: 150px;
 }
 
 /* Add Animation */
-.modal-content, #caption {  
+.modal-content, #caption {
 -webkit-animation-name: zoom;
 -webkit-animation-duration: 0.6s;
 animation-name: zoom;
@@ -333,12 +334,12 @@ animation-duration: 0.6s;
 }
 
 @-webkit-keyframes zoom {
-from {-webkit-transform:scale(0)} 
+from {-webkit-transform:scale(0)}
 to {-webkit-transform:scale(1)}
 }
 
 @keyframes zoom {
-from {transform:scale(0)} 
+from {transform:scale(0)}
 to {transform:scale(1)}
 }
 
@@ -379,7 +380,7 @@ display: inline-block;
 .my-contact h1 a:hover {
     background-color: transparent;
     border-bottom: 2px solid #387c6d;
-    
+
 }
 
 .my-contact-icons-row {
@@ -388,6 +389,7 @@ text-align:center;
 
 .my-contact {
     padding: 10px;
+    min-height: 30vh;
 }
 
 .my-contact h1::before {
@@ -438,7 +440,7 @@ text-align:center;
 
 .my-portfolio-row1 {
     text-align: center;
-} 
+}
 
 .my-portfolio-row1 h1 {
     font-size: 20px;
